Clean up deprecated docker-compose configuration.

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,5 @@
 # docker-compose.yml configuration
-
-CRN_APP_TAG=latest
-CRN_SERVER_TAG=latest
+# OpenNeuro content container
 CONTENT_IMAGE=openneuro/content:latest
-DATALAD_SERVICE_TAG=latest
+# Data storage, services create subdirectories here for dataset storage, uploads, temporary paths, etc...
 PERSISTENT_DIR=/data
