Add missing graphql-tag dependency to each package which requires it.

--- a/packages/openneuro-client/package.json
+++ b/packages/openneuro-client/package.json
@@ -19,6 +19,7 @@
     "esm": "^3.0.84",
     "form-data": "^2.5.0",
     "graphql": "14.5.8",
+    "graphql-tag": "^2.10.3",
     "graphql-tools": "4.0.6",
     "node-fetch": "^2.6.0",
     "semver": "^5.5.0",
