--- a/packages/openneuro-app/package.json
+++ b/packages/openneuro-app/package.json
@@ -34,6 +34,7 @@
     "enzyme-to-json": "^3.3.5",
     "eslint": "^6.5.1",
     "graphql": "14.5.8",
+    "graphql-tag": "^2.10.3",
     "graphql-tools": "4.0.6",
     "jszip": "^3.1.5",
     "jwt-decode": "^2.2.0",
