--- a/packages/openneuro-cli/package.json
+++ b/packages/openneuro-cli/package.json
@@ -20,6 +20,7 @@
     "commander": "^2.15.1",
     "esm": "^3.0.16",
     "find-config": "^1.0.0",
+    "graphql-tag": "^2.10.3",
     "inquirer": "^5.2.0",
     "mkdirp": "^0.5.1",
     "moment": "^2.22.2",
