--- a/packages/openneuro-indexer/package.json
+++ b/packages/openneuro-indexer/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@elastic/elasticsearch": "^7.5.0",
     "apollo-link-retry": "^2.2.15",
+    "graphql-tag": "^2.10.3",
     "ts-node": "^8.6.2",
     "typescript": "^3.7.5"
   },
