--- a/packages/openneuro-app/package.json
+++ b/packages/openneuro-app/package.json
@@ -109,7 +109,7 @@
     "webpack-dev-server": "^3.1.9",
     "webpack-merge": "^4.1.4",
     "webpack-visualizer-plugin": "^0.1.11",
-    "worker-loader": "^2.0.0"
+    "worker-plugin": "^3.2.0"
   },
   "jest": {
     "setupFiles": [
