--- a/packages/openneuro-client/package.json
+++ b/packages/openneuro-client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "openneuro-client",
-  "version": "3.12.9",
+  "version": "3.13.0-alpha.0",
   "description": "OpenNeuro shared client library.",
   "main": "src/index.js",
   "browser": "src/client.js",
