--- a/packages/openneuro-indexer/package.json
+++ b/packages/openneuro-indexer/package.json
@@ -1,6 +1,6 @@
 {
   "name": "openneuro-indexer",
-  "version": "3.12.9",
+  "version": "3.13.0-alpha.0",
   "description": "OpenNeuro elastic search indexing tool",
   "main": "./dist/index.js",
   "types": "./src/index.d.ts",
