--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -143,7 +143,7 @@ jobs:
 
   datalad-service-test:
     docker:
-      - image: circleci/python:3.6.9-stretch-node
+      - image: circleci/python:3.7.7-stretch-node
     steps:
       - checkout
 
@@ -153,25 +153,28 @@ jobs:
       # install yarn for bids-validator
       - run: curl -o- -L https://yarnpkg.com/install.sh | sudo bash -s -- --version 1.9.2
 
+      # Install codecov and pipenv
+      - run:
+          name: Install pipenv
+          command: pip install --user pipenv
+          working_directory: ~/project/services/datalad
+
       # create venv and install dependencies
       - run:
           name: Install Python deps
-          command: sudo pip install -r requirements.txt
+          command: pipenv install --dev
           working_directory: ~/project/services/datalad
-
-      # Install codecov
-      - run: pip install --user codecov
 
       # install git-annex
       - run: curl http://ia600309.us.archive.org/26/items/git-annex-builds/SHA256E-s52708477--e5930f66a9b56a88de5dabe65964e9eb59bf34c0bbb6c9bb0305773d69852add.tar.gz | tar -xvz  && sudo mv git-annex.linux/* /usr/local/bin
 
       # run unit tests
       - run:
-          command: pytest --cov ./datalad_service
+          command: pipenv run pytest --cov ./datalad_service
           working_directory: ~/project/services/datalad
 
       # Report coverage info
-      - run: $(python -c "import site; print(site.USER_BASE)")/bin/codecov
+      - run: pipenv run codecov
 
   datalad-service-build:
     machine:
