--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -166,7 +166,7 @@ jobs:
           working_directory: ~/project/services/datalad
 
       # install git-annex
-      - run: curl http://ia600309.us.archive.org/26/items/git-annex-builds/SHA256E-s52708477--e5930f66a9b56a88de5dabe65964e9eb59bf34c0bbb6c9bb0305773d69852add.tar.gz | tar -xvz  && sudo mv git-annex.linux/* /usr/local/bin
+      - run: curl -L http://archive.org/download/git-annex-builds/SHA256E-s52844027--52257d8de278e4ecf94a971c716b7929f6d0e1fe6c5a65ed40b03f0964f9c85d.tar.gz | tar -xvz  && sudo mv git-annex.linux/* /usr/local/bin
 
       # run unit tests
       - run:
