--- a/helm/openneuro/templates/dataset-worker-stateful-set.yaml
+++ b/helm/openneuro/templates/dataset-worker-stateful-set.yaml
@@ -20,6 +20,13 @@ spec:
       - name: datasets
         persistentVolumeClaim:
           claimName: {{ .Release.Name }}-datasets
+      - name: ssh-key
+        secret:
+          secretName: {{ .Release.Name }}-ssh-key
+          items:
+          - key: datalad-key
+            path: datalad-key
+            mode: 0400
       containers:
       - name: {{ .Release.Name }}-dataset-worker
         image: 'openneuro/datalad-service:v{{ .Chart.AppVersion }}'
@@ -40,6 +47,9 @@ spec:
         volumeMounts:
         - name: datasets
           mountPath: /datalad
+        - name: ssh-key
+          mountPath: /datalad-key
+          subPath: datalad-key
         livenessProbe:
           initialDelaySeconds: 10
           periodSeconds: 1
