--- a/helm/openneuro/values-production.yaml
+++ b/helm/openneuro/values-production.yaml
@@ -17,7 +17,7 @@ freshDeskUrl: https://openneuro.freshdesk.com/widgets/feedback_widget/new?&widge
 googleTrackingId: UA-100754266-2
 
 # AWS TLS Certificate ARN
-certifcateArn: "arn:aws:acm:us-east-1:488777458602:certificate/7a4fa0e4-aee0-481b-82ee-dbde4c10c227"
+certifcateArn: 'arn:aws:acm:us-east-1:488777458602:certificate/7a4fa0e4-aee0-481b-82ee-dbde4c10c227'
 
 # Dataset worker parallelism
 dataladWorkers: 16
@@ -45,3 +45,12 @@ redis:
   usePassword: false
   master:
     disableCommands: []
+    persistence:
+      size: 40Gi
+    statefulset:
+      updateStrategy: RollingUpdate
+  slave:
+    persistence:
+      size: 40Gi
+    statefulset:
+      updateStrategy: RollingUpdate
