Add docz to generate docs.

--- a/package.json
+++ b/package.json
@@ -55,5 +55,10 @@
       "!**/node_modules/**",
       "!**/vendor/**"
     ]
+  },
+  "dependencies": {
+    "docz": "^2.3.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
   }
 }
