--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
   },
   "dependencies": {
     "docz": "^2.3.1",
+    "gatsby-plugin-s3": "^0.3.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   }
