--- a/packages/openneuro-app/package.json
+++ b/packages/openneuro-app/package.json
@@ -38,6 +38,7 @@
     "graphql-tools": "4.0.6",
     "jszip": "^3.1.5",
     "jwt-decode": "^2.2.0",
+    "node-sass": "4.14.1",
     "openneuro-client": "^3.14.0",
     "pluralize": "^7.0.0",
     "prismjs": "^1.10.0",
