--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,6 @@ version: '2.3'
 volumes:
   project:
   yarn_cache:
-  node_modules:
   webpack_cache:
 
 services:
@@ -17,9 +16,9 @@ services:
     volumes:
       - .:/srv
       - yarn_cache:/root/.cache
-      - node_modules:/srv/node_modules
       - project:/srv/packages/openneuro-app/dist
     tmpfs:
+      - /srv/packages/node_modules:exec
       - /srv/packages/openneuro-app/node_modules:exec
       - /srv/packages/openneuro-client/node_modules:exec
       - /srv/packages/openneuro-cli/node_modules:exec
