--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,7 +29,7 @@ services:
   app:
     extends:
       service: nodejs
-    command: sh -c "yarn install --mutex file:/usr/local/share/.cache/.yarn-mutex && cd /srv/packages/openneuro-app && yarn start"
+    command: sh -c "yarn install --mutex file:/usr/local/share/.cache/.yarn-mutex --check-files && cd /srv/packages/openneuro-app && yarn start"
     volumes:
       - webpack_cache:/webpack-cache
     ports:
@@ -39,7 +39,7 @@ services:
   server:
     extends:
       service: nodejs
-    command: sh -c "yarn install --mutex file:/usr/local/share/.cache/.yarn-mutex && cd /srv/packages/openneuro-server && node index.js"
+    command: sh -c "yarn install --mutex file:/usr/local/share/.cache/.yarn-mutex --check-files && cd /srv/packages/openneuro-server && node index.js"
     depends_on:
       - redis
       - mongo
@@ -50,7 +50,7 @@ services:
   indexer:
     extends:
       service: nodejs
-    command: sh -c "yarn install --mutex file:/usr/local/share/.cache/.yarn-mutex && yarn ts-node /srv/packages/openneuro-indexer/src/index.ts"
+    command: sh -c "yarn install --mutex file:/usr/local/share/.cache/.yarn-mutex --check-files && yarn ts-node /srv/packages/openneuro-indexer/src/index.ts"
     depends_on:
       - server
       - elasticsearch
