--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,26 +10,20 @@ volumes:
 services:
   # This dummy service provides shared configuration for all Node deps
   nodejs:
-    image: node:12
+    build: .
+    image: nodejs-image
     env_file: ./config.env
     working_dir: /srv
     volumes:
-      - .:/srv
       - yarn_cache:/usr/local/share/.cache
       - project:/srv/packages/openneuro-app/dist
-    tmpfs:
-      - /srv/packages/node_modules:exec
-      - /srv/packages/openneuro-app/node_modules:exec
-      - /srv/packages/openneuro-client/node_modules:exec
-      - /srv/packages/openneuro-cli/node_modules:exec
-      - /srv/packages/openneuro-server/node_modules:exec
-      - /srv/packages/openneuro-indexer/node_modules:exec
 
   # web app bundle build
   app:
     extends:
       service: nodejs
-    command: sh -c "yarn install --mutex file:/usr/local/share/.cache/.yarn-mutex --check-files && cd /srv/packages/openneuro-app && yarn start"
+    working_dir: /srv/packages/openneuro-app
+    command: yarn start
     volumes:
       - webpack_cache:/webpack-cache
     ports:
@@ -39,7 +33,8 @@ services:
   server:
     extends:
       service: nodejs
-    command: sh -c "yarn install --mutex file:/usr/local/share/.cache/.yarn-mutex --check-files && cd /srv/packages/openneuro-server && node index.js"
+    working_dir: /srv/packages/openneuro-server
+    command: node src/index.js
     depends_on:
       - redis
       - mongo
@@ -50,7 +45,7 @@ services:
   indexer:
     extends:
       service: nodejs
-    command: sh -c "yarn install --mutex file:/usr/local/share/.cache/.yarn-mutex --check-files && yarn ts-node /srv/packages/openneuro-indexer/src/index.ts"
+    command: yarn ts-node /srv/packages/openneuro-indexer/src/index.ts
     depends_on:
       - server
       - elasticsearch
