Start getting tests to work with the new paths.

--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
       "!**/papaya.js",
       "!**/*.spec.js",
       "!**/node_modules/**",
-      "!**/vendor/**"
+      "!**/vendor/**",
+      "!.docz/**"
     ]
   },
   "dependencies": {
