Fix a few more server path issues.

--- a/packages/openneuro-server/package.json
+++ b/packages/openneuro-server/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "main": "src/index.js",
   "scripts": {
-    "lint": "eslint libs/ handlers/ tests/",
+    "lint": "eslint src",
     "start": "node src/index.js",
     "test": "jest"
   },
