--- a/packages/openneuro-server/Dockerfile
+++ b/packages/openneuro-server/Dockerfile
@@ -12,4 +12,4 @@ HEALTHCHECK --interval=10s --retries=10 CMD curl -f 'http://localhost:8111' || e
 ENV NODE_OPTIONS=--max_old_space_size=1024
 
 # start server
-CMD ["node", "/srv/index.js"]
+CMD ["node", "/srv/src/index.js"]
