--- a/lerna.json
+++ b/lerna.json
@@ -3,5 +3,5 @@
   "packages": ["packages/*"],
   "npmClient": "yarn",
   "useWorkspaces": true,
-  "version": "3.14.0"
+  "version": "3.14.1-alpha.0"
 }
