--- a/helm/openneuro-rook-edgefs/templates/rook-cluster.yaml
+++ b/helm/openneuro-rook-edgefs/templates/rook-cluster.yaml
@@ -1,19 +1,12 @@
 apiVersion: v1
-kind: Namespace
-metadata:
-  name: rook-edgefs
----
-apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: rook-edgefs-cluster
-  namespace: rook-edgefs
 ---
 kind: Role
 apiVersion: rbac.authorization.k8s.io/v1beta1
 metadata:
   name: rook-edgefs-cluster
-  namespace: rook-edgefs
 rules:
   - apiGroups: ['']
     resources: ['configmaps', 'endpoints']
@@ -33,7 +26,6 @@ kind: RoleBinding
 apiVersion: rbac.authorization.k8s.io/v1beta1
 metadata:
   name: rook-edgefs-cluster-mgmt
-  namespace: rook-edgefs
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
@@ -41,6 +33,7 @@ roleRef:
 subjects:
   - kind: ServiceAccount
     name: rook-edgefs-system
+    # TODO - Generalize this?
     namespace: rook-edgefs-system
 ---
 # Allow the pods in this namespace to work with configmaps
@@ -124,11 +117,10 @@ apiVersion: edgefs.rook.io/v1
 kind: Cluster
 metadata:
   name: rook-edgefs
-  namespace: rook-edgefs
 spec:
   edgefsImageName: edgefs/edgefs:{{ .Values.edgefs.version }}
   serviceAccount: rook-edgefs-cluster
-  dataVolumeSize: { { .Values.edgefs.dataVolumeSize } }
+  dataVolumeSize: '{{ .Values.edgefs.dataVolumeSize }}'
   #devicesResurrectMode: "restoreZapWait"
   #dashboard:
   #  localAddr: 10.3.30.75
