--- a/helm/openneuro-rook-edgefs/templates/rook-nfs-crd.yaml
+++ b/helm/openneuro-rook-edgefs/templates/rook-nfs-crd.yaml
@@ -1,7 +1,7 @@
 apiVersion: edgefs.rook.io/v1
 kind: NFS
 metadata:
-  name: nfs-datasets
+  name: rook-edgefs
 spec:
   instances: 3
   relaxedDirUpdates: true
