--- a/config.env.example
+++ b/config.env.example
@@ -57,7 +57,7 @@ ENGINE_API_KEY=
 MONGO_URL=mongodb://mongo:27017/crn
 
 # DataLad service container host and port
-DATALAD_SERVICE_URI=datalad:9877
+DATALAD_SERVICE_URI=datalad
 
 # Redis connection
 REDIS_HOST=redis
@@ -69,7 +69,7 @@ ANALYSIS_ENABLED=true
 
 # Datalad ----------------------------------------------------------------------
 
-DATALAD_WORKERS=4
+DATALAD_WORKERS=2
 
 # GitHub user must have admin on the organization
 DATALAD_GITHUB_EXPORTS_ENABLED=false
