--- a/helm/openneuro/templates/dataset-worker-stateful-set.yaml
+++ b/helm/openneuro/templates/dataset-worker-stateful-set.yaml
@@ -28,6 +28,31 @@ spec:
             path: datalad-key
             mode: 0400
       containers:
+      - name: {{ .Release.Name }}-datalad-service
+        image: 'openneuro/datalad-service:v{{ .Chart.AppVersion }}'
+        resources:
+          limits:
+            cpu: "1"
+            memory: "3Gi"
+          requests:
+            cpu: "0.2"
+            memory: "1Gi"
+        ports:
+        - containerPort: 80
+        envFrom:
+        - configMapRef:
+            name: {{ .Release.Name }}-configmap
+        - secretRef:
+            name: {{ .Release.Name }}-secret
+        volumeMounts:
+        - name: datasets
+          mountPath: /datalad
+        livenessProbe:
+          initialDelaySeconds: 30
+          periodSeconds: 30
+          httpGet:
+            path: '/heartbeat'
+            port: 80
       - name: {{ .Release.Name }}-dataset-worker
         image: 'openneuro/datalad-service:v{{ .Chart.AppVersion }}'
         resources:
