Update charts to support Kubernetes 1.16

--- a/helm/openneuro/values.yaml
+++ b/helm/openneuro/values.yaml
@@ -32,6 +32,7 @@ efs-provisioner:
     efsFileSystemId: fs-acb10b4f
     path: /pv
     storageClass:
+      name: efs
       reclaimPolicy: Retain
 
 # Load balancer / ingress config
