--- a/helm/openneuro/Chart.yaml
+++ b/helm/openneuro/Chart.yaml
@@ -8,11 +8,11 @@ sources:
 appVersion: 3.14.3
 dependencies:
   - name: redis
-    version: 7.1.0
-    repository: https://kubernetes-charts.storage.googleapis.com/
+    version: 10.6.17
+    repository: https://charts.bitnami.com/bitnami
   - name: efs-provisioner
-    version: 0.3.7
+    version: 0.11.1
     repository: https://kubernetes-charts.storage.googleapis.com/
   - name: aws-alb-ingress-controller
-    version: 0.1.11
+    version: 1.0.0
     repository: https://kubernetes-charts-incubator.storage.googleapis.com/
