--- a/helm/openneuro/templates/configmap.yaml
+++ b/helm/openneuro/templates/configmap.yaml
@@ -12,5 +12,5 @@ data:
   REDIS_HOST: {{ .Release.Name }}-redis-master
   REDIS_PORT: "6379"
   GRAPHQL_ENDPOINT: http://{{ .Release.Name }}-api:8111/crn/graphql
-  DATALAD_SERVICE_URI: {{ .Release.Name }}-datalad-service
+  DATALAD_SERVICE_URI: {{ .Release.Name }}-dataset-worker
   DATALAD_S3_PUBLIC_ON_EXPORT: "yes"
