--- a/helm/eksctl-cluster-staging.yaml
+++ b/helm/eksctl-cluster-staging.yaml
@@ -1,13 +1,25 @@
 apiVersion: eksctl.io/v1alpha5
 kind: ClusterConfig
-
 metadata:
   name: openneuro-staging
   region: us-east-1
-
+  version: "1.15"
 nodeGroups:
   - name: general
-    instanceType: m5ad.large
-    desiredCapacity: 3
+    amiFamily: Ubuntu1804
+    instanceType: c5a.xlarge
+    desiredCapacity: 2
     ssh:
       allow: true
+    preBootstrapCommands:
+      - apt update
+      - apt install -y nfs-common zfsutils-linux
+  - name: storage
+    amiFamily: Ubuntu1804
+    instanceType: c5d.xlarge
+    desiredCapacity: 2
+    ssh:
+      allow: true
+    preBootstrapCommands:
+      - apt update
+      - apt install -y nfs-common zfsutils-linux
