Move hash-paths helper into DLS container.

--- a/services/datalad/Dockerfile
+++ b/services/datalad/Dockerfile
@@ -6,6 +6,7 @@ COPY Pipfile.lock /Pipfile.lock
 COPY datalad_service /datalad_service
 COPY dataset-worker /dataset-worker
 COPY beat-scheduler /beat-scheduler
+COPY hash-paths.js /hash-paths.js
 COPY get_docker_scale.py /get_docker_scale.py
 COPY ./ssh_config /root/.ssh/config
 
