Helm: Switch production load balancer to new region.

--- a/helm/openneuro/values-production.yaml
+++ b/helm/openneuro/values-production.yaml
@@ -48,7 +48,7 @@ efs-provisioner:
 
 # Load balancer / ingress config
 aws-alb-ingress-controller:
-  awsRegion: us-east-1
+  awsRegion: us-west-2
   autoDiscoverAwsVpcID: true
   clusterName: openneuro-prod
 
