bring back packages/openneuro-server as server volume

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,6 +35,8 @@ services:
       service: nodejs
     working_dir: /srv/packages/openneuro-server
     command: node src/index.js
+    volumes:
+      - ./packages/openneuro-server:/srv/packages/openneuro-server
     depends_on:
       - redis
       - mongo
