--- a/helm/openneuro/values-production.yaml
+++ b/helm/openneuro/values-production.yaml
@@ -61,8 +61,22 @@ redis:
       size: 40Gi
     statefulset:
       updateStrategy: RollingUpdate
+    resources:
+      limits:
+        cpu: '1'
+        memory: '4Gi'
+      requests:
+        cpu: '250m'
+        memory: '2Gi'
   slave:
     persistence:
       size: 40Gi
     statefulset:
       updateStrategy: RollingUpdate
+    resources:
+      limits:
+        cpu: '1'
+        memory: '4Gi'
+      requests:
+        cpu: '250m'
+        memory: '2Gi'
