--- a/helm/openneuro/templates/api-deployment.yaml
+++ b/helm/openneuro/templates/api-deployment.yaml
@@ -8,7 +8,7 @@ metadata:
     release: '{{ .Release.Name }}'
     heritage: '{{ .Release.Service }}'
 spec:
-  replicas: 4
+  replicas: {{ .Values.apiReplicas }}
   selector:
     matchLabels:
       app: {{ .Release.Name }}-api
