--- a/helm/openneuro/values-production.yaml
+++ b/helm/openneuro/values-production.yaml
@@ -22,6 +22,9 @@ certifcateArn: "arn:aws:acm:us-west-2:488777458602:certificate/d37b43e0-9af3-423
 # Dataset worker parallelism
 dataladWorkers: 4
 
+# OpenNeuro-server API parallelism
+apiReplicas: 4
+
 # Content container tag
 contentTag: v1.0.3
 
@@ -63,11 +66,11 @@ redis:
       updateStrategy: RollingUpdate
     resources:
       limits:
-        cpu: '1'
-        memory: '4Gi'
+        cpu: "1"
+        memory: "4Gi"
       requests:
-        cpu: '250m'
-        memory: '2Gi'
+        cpu: "250m"
+        memory: "2Gi"
   slave:
     persistence:
       size: 40Gi
@@ -75,8 +78,8 @@ redis:
       updateStrategy: RollingUpdate
     resources:
       limits:
-        cpu: '1'
-        memory: '4Gi'
+        cpu: "1"
+        memory: "4Gi"
       requests:
-        cpu: '250m'
-        memory: '2Gi'
+        cpu: "250m"
+        memory: "2Gi"
