--- a/helm/openneuro/values.yaml
+++ b/helm/openneuro/values.yaml
@@ -25,6 +25,9 @@ dataladWorkers: 4
 # OpenNeuro-server API parallelism
 apiReplicas: 2
 
+# Static service parallelism
+webReplicas: 2
+
 # Content container tag
 contentTag: v1.0.3
 
