--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -143,7 +143,7 @@ jobs:
 
   datalad-service-test:
     docker:
-      - image: circleci/python:3.7.7-stretch-node
+      - image: circleci/python:3.8.3-node
     steps:
       - checkout
 
