--- a/helm/openneuro/templates/configmap.yaml
+++ b/helm/openneuro/templates/configmap.yaml
@@ -15,3 +15,4 @@ data:
   DATALAD_SERVICE_URI: {{ .Release.Name }}-dataset-worker
   DATALAD_S3_PUBLIC_ON_EXPORT: "yes"
   LOCPATH: ""
+  SENTRY_DSN: {{ .Values.sentryDsn | quote }}
