--- a/helm/openneuro/values-production.yaml
+++ b/helm/openneuro/values-production.yaml
@@ -31,6 +31,9 @@ webReplicas: 4
 # Content container tag
 contentTag: v1.0.3
 
+# Sentry DSN (non-secret version)
+sentryDsn: https://ba0c58863b3e40a2a412132bfd2711ea@o114074.ingest.sentry.io/251076
+
 # Configure storage node EBS volumes
 # Workers are evenly distributed across available pools
 # Size in bytes
