--- a/packages/openneuro-server/Dockerfile
+++ b/packages/openneuro-server/Dockerfile
@@ -10,4 +10,4 @@ HEALTHCHECK --interval=10s --retries=10 CMD curl -f 'http://localhost:8111' || e
 ENV NODE_OPTIONS=--max_old_space_size=1024
 
 # start server
-CMD ["ts-node", "/srv/src/server.js"]
+CMD ["/srv/node_modules/.bin/ts-node", "/srv/src/server.js"]
