--- a/packages/openneuro-server/package.json
+++ b/packages/openneuro-server/package.json
@@ -64,6 +64,7 @@
     "subscriptions-transport-ws": "^0.9.9",
     "superagent": "^3.8.2",
     "ts-node": "^8.10.2",
+    "typescript": "^3.9.6",
     "underscore": "^1.8.3",
     "uuid": "^3.0.1",
     "xmldoc": "^1.1.0"
