Production TypeScript build fixes for openneuro-server.

--- a/packages/openneuro-server/Dockerfile
+++ b/packages/openneuro-server/Dockerfile
@@ -1,13 +1,15 @@
-FROM node:12.18.0-alpine3.12
+FROM node:14.5.0-alpine3.12
 
 # install server app
 ADD . /srv
 WORKDIR /srv
 RUN apk add curl git --no-cache --update && yarn install
+WORKDIR /srv/packages/openneuro-server
+RUN yarn build
 
 HEALTHCHECK --interval=10s --retries=10 CMD curl -f 'http://localhost:8111' || exit 1
 
 ENV NODE_OPTIONS=--max_old_space_size=1024
 
 # start server
-CMD ["/srv/node_modules/.bin/ts-node", "/srv/src/server.js"]
+CMD ["node", "/srv/dist/src/server.js"]
