Fix build issue for zlib import in typescript files.

--- a/packages/openneuro-server/Dockerfile
+++ b/packages/openneuro-server/Dockerfile
@@ -6,6 +6,7 @@ WORKDIR /srv
 RUN apk add curl git --no-cache --update && yarn install
 WORKDIR /srv/packages/openneuro-server
 RUN yarn build
+WORKDIR /srv
 
 HEALTHCHECK --interval=10s --retries=10 CMD curl -f 'http://localhost:8111' || exit 1
 
