--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -84,7 +84,7 @@ jobs:
           command: docker login -u $DOCKER_USER -p $DOCKER_PASS
       - run:
           name: build openneuro-server
-          command: docker build --pull -t openneuro/server packages/openneuro-server
+          command: docker build --pull -t openneuro/server -f packages/openneuro-server/Dockerfile .
       - run:
           name: docker tag + push (master)
           command: |
