--- a/lerna.json
+++ b/lerna.json
@@ -3,5 +3,5 @@
   "packages": ["packages/*"],
   "npmClient": "yarn",
   "useWorkspaces": true,
-  "version": "3.17.0-alpha.7"
+  "version": "3.17.0"
 }
