Fix email secret values.

--- a/helm/openneuro/templates/secret.yaml
+++ b/helm/openneuro/templates/secret.yaml
@@ -19,8 +19,8 @@ stringData:
 {{- end }}
   CRN_SERVER_MAIL_SERVICE: {{ required "MAIL_SERVICE is required" .Values.secrets.mail.CRN_SERVER_MAIL_SERVICE | quote }}
   CRN_SERVER_MAIL_USER: {{ required "MAIL_USER is required" .Values.secrets.mail.CRN_SERVER_MAIL_USER | quote }}
-  CRN_SERVER_MAIL_URL: {{ required "MAIL_URL is required" .Values.secrets.mail.CRN_SERVER_MAIL_USER | quote }}
-  CRN_SERVER_MAIL_PASS: {{ required "MAIL_PASS is required" .Values.secrets.mail.CRN_SERVER_MAIL_USER | quote }}
+  CRN_SERVER_MAIL_URL: {{ required "MAIL_URL is required" .Values.secrets.mail.CRN_SERVER_MAIL_URL | quote }}
+  CRN_SERVER_MAIL_PASS: {{ required "MAIL_PASS is required" .Values.secrets.mail.CRN_SERVER_MAIL_PASS | quote }}
   AWS_REGION: {{ required "AWS_REGION is required" .Values.secrets.aws.AWS_REGION | quote }}
   AWS_ACCOUNT_ID: {{ required "AWS_ACCOUNT_ID is required" .Values.secrets.aws.AWS_ACCOUNT_ID | quote }}
   AWS_ACCESS_KEY_ID: {{ required "AWS_ACCESS_KEY_ID is required" .Values.secrets.aws.AWS_ACCESS_KEY_ID | quote }}
