Remove Celery specific configuration from helm deployment.
Adds in the Ingress setup for the new upload API.

--- a/helm/openneuro/templates/ingress.yaml
+++ b/helm/openneuro/templates/ingress.yaml
@@ -41,6 +41,13 @@ spec:
             backend:
               serviceName: {{ .Release.Name }}-api
               servicePort: 8111
+          {{- $relname := .Release.Name -}}
+          {{- range until ( .Values.dataladWorkers | int ) }}
+          - path: /uploads/{{ . }}
+            backend:
+              serviceName: {{ $relname }}-dataset-worker-{{ . }}
+              servicePort: 80
+          {{- end }}
           - path: /*
             backend:
               serviceName: {{ .Release.Name }}-web
