--- a/packages/openneuro-cli/package.json
+++ b/packages/openneuro-cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "openneuro-cli",
-  "version": "3.18.0",
+  "version": "3.18.1-alpha.0",
   "description": "OpenNeuro command line uploader / editor.",
   "main": "index.js",
   "repository": "git@github.com:OpenNeuroOrg/openneuro.git",
@@ -27,7 +27,7 @@
     "inquirer": "^5.2.0",
     "mkdirp": "^0.5.1",
     "node-fetch": "^2.6.0",
-    "openneuro-client": "^3.18.0"
+    "openneuro-client": "^3.18.1-alpha.0"
   },
   "scripts": {
     "openneuro": "node src/index.js"
