--- a/helm/openneuro/values-production.yaml
+++ b/helm/openneuro/values-production.yaml
@@ -17,7 +17,7 @@ freshDeskUrl: https://openneuro.freshdesk.com/widgets/feedback_widget/new?&widge
 googleTrackingId: UA-100754266-2
 
 # AWS TLS Certificate ARN
-certifcateArn: 'arn:aws:acm:us-west-2:488777458602:certificate/d37b43e0-9af3-423a-86ef-0652e0332e33'
+certifcateArn: "arn:aws:acm:us-west-2:488777458602:certificate/d37b43e0-9af3-423a-86ef-0652e0332e33"
 
 # Dataset worker parallelism
 dataladWorkers: 4
@@ -44,7 +44,7 @@ storagePools:
     - name: a
       size: 16492674416640
     - name: b
-      size: 16492674416640
+      size: 32985348833280
 
 # The underlying EFS volume should be created manually and configured here
 efs-provisioner:
@@ -72,11 +72,11 @@ redis:
       updateStrategy: RollingUpdate
     resources:
       limits:
-        cpu: '2'
-        memory: '8Gi'
+        cpu: "2"
+        memory: "8Gi"
       requests:
-        cpu: '500m'
-        memory: '4Gi'
+        cpu: "500m"
+        memory: "4Gi"
   slave:
     persistence:
       size: 40Gi
@@ -84,11 +84,11 @@ redis:
       updateStrategy: RollingUpdate
     resources:
       limits:
-        cpu: '2'
-        memory: '8Gi'
+        cpu: "2"
+        memory: "8Gi"
       requests:
-        cpu: '500m'
-        memory: '4Gi'
+        cpu: "500m"
+        memory: "4Gi"
 
 apm-server:
   apmConfig:
