Add Falcon support and correctly tag elastic APM urls.

--- a/services/datalad/Pipfile
+++ b/services/datalad/Pipfile
@@ -21,6 +21,8 @@ GitPython = "*"
 PyJWT = "*"
 gunicorn = "*"
 gevent = "*"
+elastic-apm = "*"
+falcon-elastic-apm = "*"
 
 [requires]
 python_version = "3.8"
