--- a/packages/openneuro-app/package.json
+++ b/packages/openneuro-app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "openneuro-app",
-  "version": "3.19.2",
+  "version": "3.20.0-alpha.0",
   "description": "React JS web frontend for the OpenNeuro platform.",
   "license": "MIT",
   "main": "app.js",
@@ -39,7 +39,7 @@
     "graphql-tools": "4.0.6",
     "jszip": "^3.1.5",
     "jwt-decode": "^2.2.0",
-    "openneuro-client": "^3.19.2",
+    "openneuro-client": "^3.20.0-alpha.0",
     "pluralize": "^7.0.0",
     "prop-types": "^15.6.0",
     "react": "16.9.0",
